Fix T77596: UI: Correct "offset even" location in solidify modifier

This only applies in the "simple" solidify mode.

Differential Revision: https://developer.blender.org/D7967